k8/mainfest/deplyoment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowebapp-deployment
  labels:
    app: gowebapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gowebapp
  template:
    metadata:
      labels:
        app: gowebapp
    spec:
      # tolerations:
      # # Moved tolerations under the pod spec
      # - key: "node-role.kubernetes.io/control-plane"
      #   operator: "Exists"
      #   effect: "NoSchedule"
      containers:
      - name: gowebapp
        image: daya28/gowebapp:v2
        ports:
        - containerPort: 8089
