k8/mainfest/a.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowebapp-deployment
  labels:
    app: gowebapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gowebapp
  template:
    metadata:
      labels:
        app: gowebapp
    spec:
      # tolerations:
      # # Moved tolerations under the pod spec
      # - key: "node-role.kubernetes.io/control-plane"
      #   operator: "Exists"
      #   effect: "NoSchedule"
      containers:
      - name: gowebapp
        image: daya28/gowebapp:v2
        ports:
        - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: gowebapp-service
  labels:
    app: gowebapp
spec:
  type: NodePort
  selector:
    app: gowebapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8089
    nodePort: 30002
---
