k8/mainfest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowebapp-service
  labels:
    app: gowebapp
spec:
  type: NodePort
  selector:
    app: gowebapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8089
    nodePort: 30002
