k8/mainfest/ing1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowebapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dayadevops.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gowebapp-service
            port:
              number: 80
