k8/mainfest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowebapp-ingress-root
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "goweb-app.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gowebapp-service
            port:
              number: 30002
      # - path: /home
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: gowebapp-service
      #       port:
      #         number: 30002
      # - path: /bye
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: gowebapp-service
      #       port:
      #         number: 80
